# capamedia-cli

./: .gitignore  CHANGELOG.md  GUIA_VARIABLES_ENTORNO_CLIENTE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: INSTALL.md
src/capamedia_cli/: __init__.py  cli.py  mcp_server.py
src/capamedia_cli/adapters/: __init__.py  base.py  claude.py  codex.py  copilot.py  cursor.py  opencode.py  windsurf.py
src/capamedia_cli/commands/: __init__.py  adopt.py  ai.py  auth.py  batch.py  canonical.py  check.py  check_install.py  clone.py  discovery.py  doctor.py  documentacion.py  fabrics.py  info.py  init.py  install.py  mcp.py  qa.py  review.py  setup.py  status.py  uninstall.py  update.py  upgrade.py  validate.py  version.py  worker.py
src/capamedia_cli/core/: __init__.py  auth.py  autofix.py  (+28 more)
tests/: test_adapters.py  test_adopt.py  test_ai_commands.py  test_auth.py  test_autofix.py  test_azure_search.py  test_bank_autofix.py  test_batch.py  test_batch_review_and_clone_init.py  test_block_0_mcp_matrix.py  test_block_15_legacy_name.py  test_block_16_test_annotations.py  test_block_17_log_transaccional.py  test_block_18_lt_only_orq.py  test_block_19_properties.py  test_block_1_hexagonal_direction.py  test_block_20_orq_migrated.py  test_block_3_naming.py  test_block_5_patterns.py  test_block_7_capacity.py  test_block_7_catalog_name.py  test_block_7_java_options.py  test_block_8_security.py  test_canonical.py  test_canonical_audit.py  test_canonical_single_source.py  test_canonical_sync.py  test_canonical_v0_23_6.py  test_catalog_injector.py  test_caveats.py  test_checklist_rules.py  test_clone.py  test_clone_init_flag.py  test_codex_mcp.py  test_dashboard.py  test_discovery.py  test_documentacion.py  test_domain_mapping.py  test_dossier.py  test_engine.py  (+27 more)
(+53 files in other folders)
